# transfer_market_game

./: .env.example  .gitignore  README.md  app.py  auth.py  create_admin.py  db.py  docker-compose.yml  fotmob_scraper.py  main.py  pyproject.toml  requirements.txt  schema.sql  scraper.py
.claude/skills/run-app/: SKILL.md
.github/workflows/: refresh_values.yml
.streamlit/: config.toml
migrations/: add_ceapi_value_columns.sql  add_draft.sql  add_duplicate_flagging.sql  add_fotmob_support.sql  add_milestone_player_snapshots.sql  add_milestone_portfolio_value.sql  add_milestones.sql  add_player_value_sources.sql  add_trade_offers.sql  add_transfers_feed.sql  add_users.sql  remove_fotmob_support.sql
